--- a/client/src/components/Hero/Hero.scss
+++ b/client/src/components/Hero/Hero.scss
@@ -1,3 +1,5 @@
+@use '../../Fonts.scss' as *;
+
 .hero {
   background-image: url("../../assets/veggies.jpg");
   height: 42vw;
@@ -22,7 +24,8 @@
     margin: 0;
     color: #ffffff;
     width: 50%;
-    font-size: 100px;
+    font-size: 11rem;
     margin-left: 1.5rem;
+    font-family: "Lemon";
   }
 }
