--- a/client/src/components/MainContent/MainContent.scss
+++ b/client/src/components/MainContent/MainContent.scss
@@ -1,3 +1,5 @@
+@use '../../Fonts.scss' as *;
+
 .maincontent {
   margin-bottom: 100px;
 }
@@ -5,6 +7,7 @@
 .mainheader {
   text-align: center;
   font-size: 80px;
+  font-family: "Lemon";
 }
 
 .img {
@@ -43,4 +46,37 @@
   text-align: center;
   font-weight: bold;
   color: #75827d;
+}
+
+.buttonwrap {
+  display: flex;
+  justify-content: center;
+}
+
+.buttons {
+  box-shadow: 0px 10px 14px -7px black;
+  background: linear-gradient(to bottom, black 5%, black 100%);
+  background-color: #e1e1e1;
+  border-radius: 8px;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 13px 32px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px black;
+}
+.myButton:hover {
+  background: linear-gradient(to bottom, black 5%, black 100%);
+  background-color: black;
+}
+.myButton:active {
+  position: relative;
+  top: 1px;
+}
+
+.mod {
+  margin-left: 1rem;
 }
